sanger/sites/tonsilimmune/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tonsil-immune
spec:
  selector:
    matchLabels:
      app: tonsil-immune
  replicas: 2
  template:
    metadata: 
      name: tonsil-immune
      labels:
        app: tonsil-immune
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: tonsil-immune
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/tonsilimmune/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "32M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tonsil-immune-b-cells
spec:
  selector:
    matchLabels:
      app: tonsil-immune-b-cells
  replicas: 1
  template:
    metadata: 
      name: tonsil-immune-b-cells
      labels:
        app: tonsil-immune-b-cells
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tonsil-immune-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.4
        imagePullPolicy: IfNotPresent
        name: tonsil-immune-b-cells
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/tonsil_b_cells.h5ad", "-t", "Tonsil B Cells", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "256M"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tonsil-immune-all
spec:
  selector:
    matchLabels:
      app: tonsil-immune-all
  replicas: 1
  template:
    metadata: 
      name: tonsil-immune-all
      labels:
        app: tonsil-immune-all
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tonsil-immune-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.4
        imagePullPolicy: IfNotPresent
        name: tonsil-immune-all
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/tonsil_immune_cells_all.h5ad", "-t", "Tonsil Cells", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "256M"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tonsil-immune-myeloid
spec:
  selector:
    matchLabels:
      app: tonsil-immune-myeloid
  replicas: 1
  template:
    metadata: 
      name: tonsil-immune-myeloid
      labels:
        app: tonsil-immune-myeloid
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tonsil-immune-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.4
        imagePullPolicy: IfNotPresent
        name: tonsil-immune-myeloid
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/tonsil_myeloid_cells.h5ad", "-t", "Tonsil Myeloid Cells.h5ad", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "256M"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tonsil-immune-memory-b-cells
spec:
  selector:
    matchLabels:
      app: tonsil-immune-memory-b-cells
  replicas: 1
  template:
    metadata: 
      name: tonsil-immune-memory-b-cells
      labels:
        app: tonsil-immune-memory-b-cells
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tonsil-immune-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.4
        imagePullPolicy: IfNotPresent
        name: tonsil-immune-memory-b-cells
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/tonsil_sorted_memory_b_cells.h5ad", "-t", "Tonsil Memory B Cells", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tonsil-immune-t-cells
spec:
  selector:
    matchLabels:
      app: tonsil-immune-t-cells
  replicas: 1
  template:
    metadata: 
      name: tonsil-immune-t-cells
      labels:
        app: tonsil-immune-t-cells
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tonsil-immune-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.4
        imagePullPolicy: IfNotPresent
        name: tonsil-immune-t-cells
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/tonsil_t_cells.h5ad", "-t", "Tonsil T Cells", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: 1
---
