sanger/sites/tonsilimmune/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tonsil-immune
  labels:
    app: tonsil-immune
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: tonsil-immune
---
apiVersion: v1
kind: Service
metadata:
  name: tonsil-immune-b-cells
  labels:
    app: tonsil-immune-b-cells
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: tonsil-immune-b-cells
---
apiVersion: v1
kind: Service
metadata:
  name: tonsil-immune-all
  labels:
    app: tonsil-immune-all
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: tonsil-immune-all
---
apiVersion: v1
kind: Service
metadata:
  name: tonsil-immune-myeloid
  labels:
    app: tonsil-immune-myeloid
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: tonsil-immune-myeloid
---
apiVersion: v1
kind: Service
metadata:
  name: tonsil-immune-memory-b-cells
  labels:
    app: tonsil-immune-memory-b-cells
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: tonsil-immune-memory-b-cells
---
apiVersion: v1
kind: Service
metadata:
  name: tonsil-immune-t-cells
  labels:
    app: tonsil-immune-t-cells
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: tonsil-immune-t-cells
---
