sanger/sites/tonsilimmune/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: tonsil-immune-org
spec:
  virtualhost:
    fqdn: www.tonsilimmune.org
  routes:
    - match: /b-cells
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-b-cells
          port: 80
    - match: /all
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-all
          port: 80
    - match: /myeloid
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-myeloid
          port: 80
    - match: /memory-b-cells
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-memory-b-cells
          port: 80
    - match: /t-cells
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-t-cells
          port: 80
    - match: /static
      services:
        - name: tonsil-immune-myeloid
          port: 80
    - match: /
      services:
        - name: tonsil-immune
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: tonsil-immune-cellgeni
spec:
  virtualhost:
    fqdn: tonsilimmune.cellgeni.sanger.ac.uk
  routes:
   
    - match: /b-cells
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-b-cells
          port: 80
    - match: /all
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-all
          port: 80
    - match: /myeloid
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-myeloid
          port: 80
    - match: /memory-b-cells
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-memory-b-cells
          port: 80
    - match: /t-cells
      prefixRewrite: "/" 
      services:
        - name: tonsil-immune-t-cells
          port: 80
    - match: /static
      services:
        - name: tonsil-immune-myeloid
          port: 80
    - match: /
      services:
        - name: tonsil-immune
          port: 80
---
